--- a/trace-authentication/src/main/resources/application.yml
+++ b/trace-authentication/src/main/resources/application.yml
@@ -3,10 +3,24 @@ spring:
     redis:
       host: 127.0.0.1
       port: 6379
-
+  datasource:
+    url: jdbc:mysql://localhost:3306/trace?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
 trace:
   snowflake:
     node-id:
       timeout-hour: 1
       redis-expire-job: 0 0/50 * * * ?
-#security.noFilter=/captcha,/login,/register
+  token:
+    expiration-second: 1800
+  captcha:
+    expiration-second: 300
+    enable: false
+  login:
+    password-error:
+      retry-count: 5
+      lock-minute: 10
+
+      #security.noFilter=/captcha,/login,/register
