--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.version>3.1.2</spring-boot.version>
         <jjwt.version>0.11.5</jjwt.version>
+        <bitwalker.version>1.21</bitwalker.version>
     </properties>
 
     <dependencies>
@@ -53,6 +54,30 @@
                 <artifactId>trace-common</artifactId>
                 <version>0.0.1</version>
                 <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.refout</groupId>
+                <artifactId>trace-common-system</artifactId>
+                <version>0.0.1</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.refout</groupId>
+                <artifactId>trace-redis</artifactId>
+                <version>0.0.1</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.refout</groupId>
+                <artifactId>trace-datasource</artifactId>
+                <version>0.0.1</version>
+                <scope>compile</scope>
+            </dependency>
+            <!-- 解析客户端操作系统、浏览器等 -->
+            <dependency>
+                <groupId>eu.bitwalker</groupId>
+                <artifactId>UserAgentUtils</artifactId>
+                <version>1.21</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
