refactor(分页查询): 更新分页查询接口示例

--- a/trace-system/src/main/resources/application.yml
+++ b/trace-system/src/main/resources/application.yml
@@ -35,7 +35,7 @@ logging:
   level:
     web: debug
     com.refout: debug
-    org.org.hibernate.orm.jdbc: trace
+    org.hibernate.orm.jdbc: trace
 
 server:
   shutdown: graceful
