build(spring-boot-admin): 添加spring-boot-admin依赖

--- a/trace-authentication/src/main/resources/application.yml
+++ b/trace-authentication/src/main/resources/application.yml
@@ -44,3 +44,11 @@ logging:
     org.org.hibernate.orm.jdbc: trace
 server:
   shutdown: graceful
+  port: 8080
+
+# 开启监控所有项
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
