--- a/trace-system/src/main/resources/application.yml
+++ b/trace-system/src/main/resources/application.yml
@@ -40,3 +40,10 @@ logging:
 server:
   shutdown: graceful
   port: 8081
+
+# 开启监控所有项
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
