--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.version>3.1.2</spring-boot.version>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
+        <spring-boot-admin.version>3.1.1</spring-boot-admin.version>
         <jjwt.version>0.11.5</jjwt.version>
         <bitwalker.version>1.21</bitwalker.version>
     </properties>
@@ -107,7 +108,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-dependencies</artifactId>
+                <version>${spring-boot-admin.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-api</artifactId>
