ci(质量): 代码质量提升

--- a/qodana.yaml
+++ b/qodana.yaml
@@ -6,7 +6,8 @@ version: "1.0"
 
 #Specify inspection profile for code analysis
 profile:
-  name: qodana.starter
+  #  name: qodana.starter
+  name: qodana.recommended
 
 #Enable inspections
 #include:
