--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -23,7 +23,7 @@ jobs:
         uses: JetBrains/qodana-action@v2023.2
         with:
           pr-mode: false
-          args: --apply-fixes
+          args: "--apply-fixes,-i,JVM/intellij-coverage-agent/maven,--linter,jetbrains/qodana-jvm:2023.2"
           push-fixes: pull-request
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }} # read the steps about it below
