--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,9 @@
         <spring-boot-admin.version>3.1.5</spring-boot-admin.version>
         <jjwt.version>0.11.5</jjwt.version>
         <bitwalker.version>1.21</bitwalker.version>
+        <intellij.coverage.agent.version>1.0.725</intellij.coverage.agent.version>
+        <intellij.agent.options>${project.basedir}/.qodana/code-coverage/output.ic,true,true,true,false
+        </intellij.agent.options>
     </properties>
 
     <dependencies>
@@ -52,6 +55,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- IntelliJ Coverage Agent -->
+        <dependency>
+            <groupId>org.jetbrains.intellij.deps</groupId>
+            <artifactId>intellij-coverage-agent</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -132,6 +141,29 @@
                 <version>${jjwt.version}</version>
                 <scope>runtime</scope>
             </dependency>
+            <dependency>
+                <groupId>org.jetbrains.intellij.deps</groupId>
+                <artifactId>intellij-coverage-agent</artifactId>
+                <version>${intellij.coverage.agent.version}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <!-- Specify the IntelliJ coverage agent -->
+                    <argLine>
+                        -javaagent:${settings.localRepository}/org/jetbrains/intellij/deps/intellij-coverage-agent/${intellij.coverage.agent.version}/intellij-coverage-agent-${intellij.coverage.agent.version}.jar=${intellij.agent.options}
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
