--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -21,11 +21,11 @@ jobs:
           fetch-depth: 0  # a full history is required for pull request analysis
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'adopt'
-          cache: 'maven'
+          distribution: 'temurin'
+          cache: maven
 
       - name: Validate Maven Wrapper
         run: mvn --version
