--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: maven-coverage-data
-          path: .qodana/code-coverage
+          path: "**/.qodana/code-coverage"
 
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.2
