ci(质量): 代码质量提升

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -19,31 +19,11 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
           fetch-depth: 0  # a full history is required for pull request analysis
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-
-      - name: Validate Maven Wrapper
-        run: mvn --version
-
-      - name: Run Tests
-        run: mvn test
-
-      - name: Archive coverage data
-        uses: actions/upload-artifact@v2
-        with:
-          name: maven-coverage-data
-          path: "**/.qodana/code-coverage"
-
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.2
         with:
           pr-mode: false
-          args: "--apply-fixes,-i,.,--linter,jetbrains/qodana-jvm:2023.2"
+          args: --apply-fixes
           push-fixes: pull-request
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }} # read the steps about it below
