--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: maven-coverage-data
-          path: "**/.qodana/code-coverage"
+          path: "trace-**/.qodana/code-coverage"
 
 
       - name: 'Qodana Scan'
