--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ target/
 .idea/misc.xml
 /.idea/httpRequests/
 
-!**/.qodana/code-coverage/output.ic
+**/.qodana/code-coverage/output*.ic
+.qodana/code-coverage/output*.ic
 
 ### Eclipse ###
 .apt_generated
