--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -40,10 +40,10 @@ jobs:
 
 
       - name: 'Qodana Scan'
-        uses: JetBrains/qodana-action@v2023.2
+        uses: JetBrains/qodana-action@main
         with:
           pr-mode: false
-          args: "-i,**/,--linter,jetbrains/qodana-jvm:2023.2"
+          args: "-i,.,--linter,jetbrains/qodana-jvm:2023.2"
           push-fixes: pull-request
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }} # read the steps about it below
