test(单元测试): 添加单元测试

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,9 @@ target/
 .idea/misc.xml
 /.idea/httpRequests/
 
-**/.qodana/code-coverage/output*.ic
+**/.qodana/code-coverage/output*.*
 .qodana/code-coverage/output*.ic
+
 
 ### Eclipse ###
 .apt_generated
