test(单元测试): 添加单元测试

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ target/
 /.idea/httpRequests/
 
 **/.qodana/code-coverage/output*.*
+**/.qodana/code-coverage/*
 .qodana/code-coverage/output*.ic
 
 
