feat(address): 添加地址管理模块

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>trace-common-web</module>
         <module>trace-common</module>
         <module>trace-common-system</module>
+        <module>trace-address</module>
     </modules>
 
     <properties>
