--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -20,11 +20,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '21'
-          distribution: 'microsoft'
+          java-version: '17'
+          distribution: 'temurin'
           cache: maven
 
       - name: Validate Maven Wrapper
