--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -46,11 +46,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Checkout repository & Set up JDK 21
+    - name: Checkout repository & Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '21'
-        distribution: 'microsoft'
+        java-version: '17'
+        distribution: 'temurin'
         cache: maven
 
     # Initializes the CodeQL tools for scanning.
