build(pom): 修改groupId及framework项目结果

--- a/trace-framework/trace-framework-data-chaincode/pom.xml
+++ b/trace-framework/trace-framework-data-chaincode/pom.xml
@@ -4,12 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.refout.trace.framework</groupId>
+        <groupId>com.refout.trace</groupId>
         <artifactId>trace-framework</artifactId>
         <version>0.0.1</version>
     </parent>
 
-    <groupId>com.refout.trace.data.chaincode</groupId>
     <artifactId>trace-framework-data-chaincode</artifactId>
 
     <properties>
