--- a/trace-framework/trace-framework-shell/pom.xml
+++ b/trace-framework/trace-framework-shell/pom.xml
@@ -4,12 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.refout.trace.framework</groupId>
+        <groupId>com.refout.trace</groupId>
         <artifactId>trace-framework</artifactId>
         <version>0.0.1</version>
     </parent>
 
-    <groupId>com.refout.trace.shell</groupId>
     <artifactId>trace-framework-shell</artifactId>
 
     <properties>
@@ -18,4 +17,27 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.refout.trace</groupId>
+            <artifactId>trace-common-web</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
