--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.refout</groupId>
+    <groupId>com.refout.trace</groupId>
     <artifactId>trace-out</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
@@ -75,31 +75,31 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.refout</groupId>
+                <groupId>com.refout.trace</groupId>
                 <artifactId>trace-common-web</artifactId>
                 <version>0.0.1</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>com.refout</groupId>
+                <groupId>com.refout.trace</groupId>
                 <artifactId>trace-common</artifactId>
                 <version>0.0.1</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>com.refout</groupId>
+                <groupId>com.refout.trace</groupId>
                 <artifactId>trace-common-system</artifactId>
                 <version>0.0.1</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>com.refout</groupId>
+                <groupId>com.refout.trace</groupId>
                 <artifactId>trace-redis</artifactId>
                 <version>0.0.1</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>com.refout</groupId>
+                <groupId>com.refout.trace</groupId>
                 <artifactId>trace-datasource</artifactId>
                 <version>0.0.1</version>
                 <scope>compile</scope>
