--- a/trace-common-web/pom.xml
+++ b/trace-common-web/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.refout</groupId>
+        <groupId>com.refout.trace</groupId>
         <artifactId>trace-out</artifactId>
         <version>0.0.1</version>
     </parent>
@@ -19,7 +19,7 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.refout</groupId>
+            <groupId>com.refout.trace</groupId>
             <artifactId>trace-common</artifactId>
             <scope>compile</scope>
         </dependency>
@@ -60,11 +60,11 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>com.refout</groupId>
+            <groupId>com.refout.trace</groupId>
             <artifactId>trace-redis</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.refout</groupId>
+            <groupId>com.refout.trace</groupId>
             <artifactId>trace-common-system</artifactId>
         </dependency>
     </dependencies>
