--- a/trace-framework/pom.xml
+++ b/trace-framework/pom.xml
@@ -4,13 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.refout</groupId>
+        <groupId>com.refout.trace</groupId>
         <artifactId>trace-out</artifactId>
         <version>0.0.1</version>
     </parent>
 
     <packaging>pom</packaging>
-    <groupId>com.refout.trace.framework</groupId>
     <artifactId>trace-framework</artifactId>
 
     <properties>
