--- a/trace-framework/trace-framework-data-db/pom.xml
+++ b/trace-framework/trace-framework-data-db/pom.xml
@@ -4,12 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.refout.trace.framework</groupId>
+        <groupId>com.refout.trace</groupId>
         <artifactId>trace-framework</artifactId>
         <version>0.0.1</version>
     </parent>
 
-    <groupId>com.refout.trace.data.db</groupId>
     <artifactId>trace-framework-data-db</artifactId>
 
     <properties>
@@ -17,5 +16,12 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.refout.trace</groupId>
+            <artifactId>trace-datasource</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
