--- a/trace-core/pom.xml
+++ b/trace-core/pom.xml
@@ -10,18 +10,18 @@
     </parent>
 
     <packaging>pom</packaging>
-    <artifactId>trace-framework</artifactId>
+    <artifactId>trace-core</artifactId>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
     </properties>
 
     <modules>
-        <module>trace-framework-shell</module>
-        <module>trace-framework-data-db</module>
-        <module>trace-framework-data-chaincode</module>
+        <module>trace-core-shell</module>
+        <module>trace-core-data-db</module>
+        <module>trace-core-data-chainblock</module>
     </modules>
 
 </project>
