--- a/trace-core/trace-core-shell/pom.xml
+++ b/trace-core/trace-core-shell/pom.xml
@@ -5,16 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.refout.trace</groupId>
-        <artifactId>trace-framework</artifactId>
+        <artifactId>trace-core</artifactId>
         <version>0.0.1</version>
     </parent>
 
-    <artifactId>trace-framework-shell</artifactId>
+    <artifactId>trace-core-shell</artifactId>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
